# hypr-agentic-ai-training

./: .gitignore  JOURNAL.md  LICENSE  READEME.md  docker-compose.yml
config-service/: .env  .env.example  .gitignore  Makefile  README.md  debug_routes.py  pyproject.toml
config-service/migrations/: 001_initial_schema.sql  002_create_users_table.sql  003_oauth_users.sql
config-service/src/config_service/: auth.py  config.py  db.py  db_test.py  main.py  migrations.py  models.py
config-service/src/config_service/api/: routers.py  routers_test.py
prompts/: 2-web-api-prompt.md  3-web-api-plan.md  4-admin-ui-prompt.md  5-admin-ui-plan.md
ui/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
ui/src/: main.ts  style.css
ui/src/components/: admin-app.ts  app-detail.ts  app-form.ts  app-list.ts  config-editor.ts  confirmation-dialog.ts  login-page.ts  theme-toggle.ts  toast-notification.ts
ui/src/models/: types.ts
ui/src/services/: api.ts  auth.ts
ui/src/utils/: validation.ts
ui/tests/e2e/: app-detail.spec.ts  app-form.spec.ts  app-list.spec.ts  config-editor.spec.ts  example.spec.ts  helpers.ts  login.spec.ts
ui/tests/unit/: api.test.ts
